2008-04-28  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Implement path bar
	  support.
	* AspNetAddIn.mdp, Makefile.am,
	  MonoDevelop.AspNet.Parser/AspNetIndentStack.cs: Remove old indent
	  stack.

2008-04-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.StateEngine/AspNetSpecialState.cs,
	  MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs: Change XML state
	  engine API to allow cloning a single node (as an alternative to the
	  whole stack).

2008-04-18  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs: Add support for
	  XML processing instructions.

2008-04-18  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.StateEngine/AspNetSpecialState.cs,
	  MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs: Minimal states
	  for ASP.NET parsing. Still need to handle expressions within
	  attribute values.
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Use new state engine
	  for triggering completion. Haven't exorcised full document parse
	  yet -- need it for doctype etc. Also need it (but low-priority,
	  threaded?) for filtering existing attributes. 
	* Makefile.am, AspNetAddIn.mdp: Updated.

2008-04-14  Michael Hutchinson <mhutchinson@novell.com> 

	

2008-04-14  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/WebTypeManager.cs: Remove debug code.
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Greatly improve
	  completion triggering behaviour. Most noticeable with tag
	  attributes.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Add server-side
	  comments to completion list.
	* MonoDevelop.AspNet.Parser/AspNetIndentStack.cs: Add more states,
	  document all the states' meaning, and handle closing some states.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 
